Fix subtitle spacing

--- a/sass/app.scss
+++ b/sass/app.scss
@@ -144,6 +144,7 @@ header.hero {
     small {
       display: block;
       clear: both;
+      margin-top: 0.5em;
     }
   }
 
